@@ -39,7 +39,7 @@ MMMMM----- Recipe via Meal-Master (tm) v7.07
  
       Title: Almond Puff
  Categories: Appetizers
-   Servings:  6
+      Yield: 6 puffs
  
     1/2 c  Butter (or margarine),
            -softened
